<resources>
    <string name="app_name">Friggly</string>
    <string name="app_launcher_name">Friggly</string>
    <string name="type_a_message">Type a message…</string>
    <string name="message_not_sent_short">Message not sent</string>
    <string name="message_not_sent_touch_retry">Not sent. Touch to retry.</string>
    <string name="message_sending_error">Your message to \'%s\' has not been sent</string>
    <string name="add_person">Add Person</string>
    <string name="attachment">Attachment</string>
    <string name="no_conversations_found">No stored conversations have been found</string>
    <string name="start_conversation">Start a conversation</string>
    <string name="reply">Reply</string>
    <string name="title_activity_login">Login</string>
    <string name="show_character_counter">Show a character counter at writing messages</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="no_reply_support">Sender doesn\'t support replies</string>
    <string name="draft">Draft</string>
    <string name="sending">Sending…</string>
    <string name="pin_conversation">Pin to the top</string>
    <string name="unpin_conversation">Unpin</string>
    <string name="forward_message">Forward</string>
    <string name="compress_error">Unable to compress image to selected size</string>
    <plurals name="and_other_contacts">
        <item quantity="one">and %d other</item>
        <item quantity="other">and %d others</item>
    </plurals>
    <string name="new_conversation">New conversation</string>
    <string name="add_contact_or_number">Add Contact or Number…</string>
    <string name="suggestions">Suggestions</string>
    <string name="scheduled_message">Scheduled message</string>
    <string name="schedule_send">Schedule send</string>
    <string name="cancel_schedule_send">Cancel schedule send</string>
    <string name="must_pick_time_in_the_future">You must pick a time in the future</string>
    <string name="schedule_send_warning">Keep the phone on and make sure there is nothing killing the app in background</string>
    <string name="update_message">Update message</string>
    <string name="send_now">Send now</string>
    <string name="channel_received_sms">Received SMS</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="me">Me</string>
    <string name="delete_whole_conversation_confirmation">Are you sure you want to delete all messages of this conversation?</string>
    <plurals name="delete_conversations">
        <item quantity="one">%d conversation</item>
        <item quantity="other">%d conversations</item>
    </plurals>
    <plurals name="delete_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="lock_screen_visibility">Lock screen notification visibility</string>
    <string name="sender_and_message">Sender and message</string>
    <string name="sender_only">Sender only</string>
    <string name="enable_delivery_reports">Enable delivery reports</string>
    <string name="use_simple_characters">Remove accents and diacritics at sending messages</string>
    <string name="mms_file_size_limit">Resize sent MMS images</string>
    <string name="mms_file_size_limit_none">No limit</string>
    <string name="outgoing_messages">Outgoing messages</string>
    <string name="group_message_mms">Send group messages as MMS</string>
    <string name="send_long_message_mms">Send long messages as MMS</string>
    <string name="messages">Messages</string>
    <string name="export_messages">Export messages</string>
    <string name="export_sms">Export SMS</string>
    <string name="export_mms">Export MMS</string>
    <string name="import_messages">Import messages</string>
    <string name="import_sms">Import SMS</string>
    <string name="import_mms">Import MMS</string>
    <string name="no_option_selected">You have to select at least one item</string>
    <string name="faq_1_title">Why does the app require access to the internet?</string>
    <string name="faq_1_text">Sadly it is needed for sending MMS attachments. Not being able to send MMS would be a really huge disadvantage compared to other apps, so we decided to go this way.
    However, as usually, there are no ads, tracking or analytics whatsoever, the internet is used only for sending MMS.</string>
    <string name="faq_2_title">The other end is not receiving my MMS, is there anything I can do about it?</string>
    <string name="faq_2_text">MMS size is limited by carriers, you can try setting a smaller limit in the app settings.</string>
    <string name="title_on_boarding_first_slide">Welcome</string>
    <string name="description_on_boarding_first_slide">Know who is calling before you answer!</string>
    <string name="title_on_boarding_second_slide">SPAMS</string>
    <string name="description_on_boarding_second_slide">Protect yourself from spam</string>
    <string name="title_on_boarding_third_slide">SMS</string>
    <string name="description_on_boarding_third_slide">Your SMS inbox categorized into highlights, spam and more</string>
    <string name="title_on_boarding_fourth_slide">RATE</string>
    <string name="description_on_boarding_fourth_slide">Get your ratings. see other\'s ratings, info and more</string>
    <string name="title_button_get_started">Get Started</string>
    <string name="terms_and_services">
        <font fgcolor='#000000'>By clicking Get Started if you reside in the EU, EEA or Switzerland you accept the </font>
        <font fgcolor='#ff00574b'>Terms of service </font>
        <font fgcolor='#000000'>and if you reside in any other country you accepts the  and Privacy Policy</font>
        <font fgcolor='#ff00574b'>Terms of Service </font>
        <font fgcolor='#ff00574b'>Terms of service </font><font fgcolor='#000000'>and </font>
        <font fgcolor='#ff00574b'>Privacy Policy. </font></string>
    <string name="hindi" translatable="false">" हिन्दी"</string>
    <string name="english" translatable="false">" English"</string>
    <string name="change_language_to">Change Language to</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is some issue or data is empty</string>
    <string name="recipe_details_preview">this is the recipes details, some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="continue_bold">CONTINUE</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="prompt_number">Enter your phone number..</string>
    <string name="prompt_country">Please select your country</string>
    <string name="verify">VERIFY OTP</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="ConsentRefreshMoreInfo">More info</string>
    <string name="EnterNumber_details">Select your country and enter your phone number</string>
    <string name="EnterNumber_title">Enter phone number</string>
    <string name="Privacy_agree_continue_button">Agree &amp; Continue</string>
    <string name="Privacy_data_title">Data we process</string>
    <string name="Privacy_text">Please take time to review the key points of our &lt;a href=%1$s>Privacy Policy&lt;/a> and &lt;a href=%2$s>Terms of Service&lt;/a> below</string>
    <string name="Privacy_title">Your privacy is important to us</string>
    <string name="Privacy_usage_title">How we use your data</string>
    <string name="Privacy_process_text">We are committed to the privacy of our users and care deeply about the data you share with us. We securely handle and process your data as per our Privacy Policy.&lt;br>The data we process depends on how you use our app. We only require your phone number and name to create your profile. We have optional features which, if used by you, require us to collect additional information. When you start using our app, we will also collect information about your interaction with our app and devices you use to access our app including information about installed apps, IP address, device location and unique identifiers.</string>
    <string name="Profile_AddPhoto">Add photo</string>
    <string name="Profile_CreateProfile">Create your profile</string>
    <string name="Profile_Email">Email</string>
    <string name="Profile_FirstName">First name</string>
    <string name="Profile_LastName">Last name</string>
    <string name="Profile_ManualInput">Type name manually</string>
    <string name="StrContinue">Continue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="Profile_gender">Select Gender</string>
    <string name="Profile_age">Your Age</string>
    <string name="no_previous_calls">No previous calls have been found</string>
    <string name="request_access">Request access</string>
    <string name="dialpad">Dialpad</string>
</resources>