<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rank.me.ui.component.home.call.CallViewModel" />

        <variable
            name="callFragment"
            type="com.rank.me.ui.component.home.call.CallsFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recents_fragment"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.pearltools.commons.views.MyTextView
            android:id="@+id/recents_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:alpha="0.8"
            android:gravity="center"
            android:paddingStart="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:text="@string/no_previous_calls"
            android:textSize="@dimen/bigger_text_size"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <com.pearltools.commons.views.MyTextView
            android:id="@+id/recents_placeholder_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recents_placeholder"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ripple_all_corners"
            android:gravity="center"
            android:padding="@dimen/activity_margin"
            android:text="@string/request_access"
            android:textSize="@dimen/bigger_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recents_placeholder"
            android:visibility="gone" />

        <com.pearltools.commons.views.MyRecyclerView
            android:id="@+id/recents_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:layoutAnimation="@anim/layout_animation"
            android:scrollbars="none"
            app:layoutManager="com.pearltools.commons.views.MyLinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <com.pearltools.commons.views.MyFloatingActionButton
                android:id="@+id/main_dialpad_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/bigger_margin"
                android:contentDescription="@string/dialpad"
                android:elevation="@dimen/medium_margin"
                android:padding="@dimen/activity_margin"
                android:layout_marginBottom="70dp"
                android:src="@drawable/ic_dialpad_vector"
                app:layout_constraintBottom_toBottomOf="@+id/recents_fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundTint="@color/colorAccent"
                app:rippleColor="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
