<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_coordinator_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/main_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.pearltools.commons.views.MyTextView
                    android:id="@+id/no_conversations_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/bigger_margin"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:text="@string/no_conversations_found"
                    android:textSize="@dimen/bigger_text_size"
                    android:textStyle="italic"
                    android:visibility="gone" />

                <com.pearltools.commons.views.MyTextView
                    android:id="@+id/no_conversations_placeholder_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/no_conversations_placeholder"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ripple_all_corners"
                    android:gravity="center"
                    android:padding="@dimen/activity_margin"
                    android:text="@string/start_conversation"
                    android:textSize="@dimen/bigger_text_size"
                    android:visibility="gone" />

                <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
                    android:id="@+id/conversations_fastscroller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.pearltools.commons.views.MyRecyclerView
                        android:id="@+id/conversations_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:layoutAnimation="@anim/layout_animation"
                        android:overScrollMode="ifContentScrolls"
                        android:scrollbars="none"
                        app:layoutManager="com.pearltools.commons.views.MyLinearLayoutManager" />

                </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
            </RelativeLayout>

            <com.pearltools.commons.views.MyFloatingActionButton
                android:id="@+id/conversations_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginBottom="70dp"
                android:src="@drawable/ic_plus_vector" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
